Estilo mobile e tablet em andamento

--- a/index.html
+++ b/index.html
@@ -4,9 +4,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Instagram Login</title>
 </head>
 <body>
-    
+    <div class="instagram-wrapper">
+        <section class="image-demo">
+            <img src="img/screenshot1.png">
+        </section>
+
+        <section class="login">
+            <div class="login-box">
+                <div class="instagram-logo">
+                    <img src="img/instagram-logo.png">
+                </div>
+                <div class="login-form">
+                    
+                    <input placeholder="Telefone, nome de usuário ou email">
+                    <input placeholder="Senha">
+                    <button type="submit">Entrar</button>
+                </div>
+                <div class="login-separador">
+                    <div class="horizontal-line"></div>
+                    <div class="line-text">OU</div>
+                    <div class="horizontal-line"></div>
+                </div>
+                <div class="login-facebook">
+                    <img src="/img/facebook-icon.png" width="16" height="16"><a href="#">Entrar com Facebook</a>
+                </div>
+
+                <div class="forgot-password">
+                    <a href="#">Esqueceu a senha?</a>
+                </div>
+            </div>
+
+            <div class="login-box">
+                <section class="create-account">
+                    Não tem uma conta? <a href="#">Cadastre-se</a>
+                </section>
+            </div>
+            <section class="download-app">
+                Obtenha o aplicativo
+                <img src="img/appstore.png" width="136" height="40">
+                <img src="img/playstore.png" width="136" height="40">
+            </section>
+
+        </section>
+
+
+    </div>
+    <footer>
+        <ul>
+            <li>Meta</li>
+            <li>Sobre</li>
+            <li>Blog</li>
+            <li>Carreiras</li>
+            <li>Ajuda</li>
+            <li>API</li>
+            <li>Privacidade</li>
+            <li>Termos</li>
+            <li>Principais contas</li>
+            <li>Hashtags</li>
+            <li>Localizações</li>
+            <li>Instagram Lite</li>
+            <li>Dança</li>
+            <li>Comida e bebida</li>
+            <li>Casa e jardim</li>
+            <li>Música</li>
+            <li>Artes visuais</li>
+        </ul>
+        <p>
+            <select>
+                <option>Português (Brasil)</option>
+                <option>English</option>
+            </select>
+            © 2022 Instagram from Meta
+        </p>
+    </footer>
+
 </body>
 </html>
