--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <div class="instagram-wrapper">
-        <section class="image-demo">
+        <div class="image-demo">
             <img src="img/screenshot1.png">
-        </section>
+        </div>
 
         <section class="login">
             <div class="login-box">
@@ -30,7 +30,7 @@
                     <div class="horizontal-line"></div>
                 </div>
                 <div class="login-facebook">
-                    <img src="/img/facebook-icon.png" width="16" height="16"><a href="#">Entrar com Facebook</a>
+                    <img src="/img/facebook-icon.png" width="16" height="16"> <a href="#">Entrar com Facebook</a>
                 </div>
 
                 <div class="forgot-password">
