Transição funcionando sem Javascript

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="instagram-wrapper">
         <div class="image-demo">
-            <img src="img/screenshot1.png">
+            <div class="img-slider">
+            </div>
         </div>
 
         <section class="login">
