Favicon and some styling

--- a/css-only-slideshow/index.html
+++ b/css-only-slideshow/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
     <title>Instagram Login</title>
 </head>
 <body>
@@ -31,7 +32,8 @@
                     <div class="horizontal-line"></div>
                 </div>
                 <div class="login-facebook">
-                    <img src="../img/facebook-icon.png" width="16" height="16"> <a href="#">Entrar com Facebook</a>
+                    <div><img src="../img/facebook-icon.png" width="16" height="16"></div>
+                    <div> <a href="#">Entrar com Facebook</a></div>
                 </div>
 
                 <div class="forgot-password">
