--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <title>Instagram Login</title>
 </head>
 <body>
@@ -31,7 +32,8 @@
                     <div class="horizontal-line"></div>
                 </div>
                 <div class="login-facebook">
-                    <img src="/img/facebook-icon.png" width="16" height="16"> <a href="#">Entrar com Facebook</a>
+                    <div><img src="img/facebook-icon.png" width="16" height="16"></div>
+                    <div> <a href="#">Entrar com Facebook</a></div>
                 </div>
 
                 <div class="forgot-password">
@@ -45,9 +47,11 @@
                 </section>
             </div>
             <section class="download-app">
-                Obtenha o aplicativo
-                <img src="img/appstore.png" width="136" height="40">
-                <img src="img/playstore.png" width="136" height="40">
+                <div>Obtenha o aplicativo</div>
+                <div class="app-icons">
+                    <img src="img/appstore.png" width="136" height="40">
+                    <img src="img/playstore.png" width="136" height="40">
+                </div>
             </section>
 
         </section>
@@ -55,25 +59,26 @@
 
     </div>
     <footer>
-        <ul>
-            <li>Meta</li>
-            <li>Sobre</li>
-            <li>Blog</li>
-            <li>Carreiras</li>
-            <li>Ajuda</li>
-            <li>API</li>
-            <li>Privacidade</li>
-            <li>Termos</li>
-            <li>Principais contas</li>
-            <li>Hashtags</li>
-            <li>Localizações</li>
-            <li>Instagram Lite</li>
-            <li>Dança</li>
-            <li>Comida e bebida</li>
-            <li>Casa e jardim</li>
-            <li>Música</li>
-            <li>Artes visuais</li>
-        </ul>
+        <div class="links">
+            <span>Meta</span>
+            <span>Sobre</span>
+            <span>Blog</span>
+            <span>Carreiras</span>
+            <span>Ajuda</span>
+            <span>API</span>
+            <span>Privacidade</span>
+            <span>Termos</span>
+            <span>Principais contas</span>
+            <span>Hashtags</span>
+            <span>Localizações</span>
+            <span>Instagram Lite</span>
+            <span>Dança</span>
+            <span>Comida e bebida</span>
+            <span>Casa e jardim</span>
+            <span>Música</span>
+            <span>Artes visuais</span>
+        </div>
+        
         <p>
             <select>
                 <option>Português (Brasil)</option>
